proyecto3/kubernetes/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
