proyecto3/kubernetes/05-grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb
  namespace: weather-system
  labels:
    app: grafana
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  sessionAffinity: None
