proyecto3/kubernetes/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 8080
      - path: /api/weather
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 8080
      - path: /stats
        pathType: Prefix
        backend:
          service:
            name: go-deployment-1-service
            port:
              number: 8081
